<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/match_container_scroll_view"
    style="@style/MatchContainer"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/match_container_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?attr/actionBarDivider"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="1dp"
        android:showDividers="middle">

        <include layout="@layout/match_card" />

    </LinearLayout>
</ScrollView>